# Tralfamador

./: .gitignore  LICENSE  README.md  fte_wayback_recover.py  pyproject.toml  tralfamador.py
tests/: test_tralfamador.py
