[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tralfamador"
version = "0.1.1"
description = "A polite Wayback Machine catalog-page recovery harness for article-like archived pages."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "requests>=2.31",
]

[project.scripts]
tralfamador = "tralfamador:main"

[tool.setuptools]
py-modules = ["tralfamador"]
